# IssueRegister_IddiLabs

./: .gitignore  BUILD.md  CLAUDE.md  CONTRIBUTING.md  FIXES.md  IssueRegister.spec  LICENSE  README.md  SPECIFICATION.md  build.bat  pyproject.toml  requirements-dev.txt  requirements.txt
docs/screenshots/: README.md
src/: __init__.py  main.py
src/database/: __init__.py  connection.py  migrations.py  models.py  queries.py
src/resources/: styles.qss
src/services/: __init__.py  audit.py  auth.py  config.py  export.py  file_service.py  issue_service.py  permissions.py
src/ui/: __init__.py  bulk_delete_dialog.py  dashboard.py  iddi_labs.py  issue_dialog.py  login.py  main_window.py  register.py  settings.py
src/ui/widgets/: __init__.py  charts.py  filter_panel.py  kpi_card.py
tests/: __init__.py  conftest.py
tests/test_database/: test_connection.py  test_models.py  test_queries.py
tests/test_services/: test_audit.py  test_auth.py  test_export.py  test_file_service.py  test_issue_service.py  test_permissions.py
tests/test_ui/: __init__.py
